force-app/main/default/objects/Attractions__c/Attractions__c.object-meta.xml
<CustomObject>
    <label>Attractions</label>
    <nameField>
        <label>Attraction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>