force-app/main/default/objects/Attractions__c/fields/Attraction_Name__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Name__c</fullName>
    <label>Attraction Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>