force-app/main/default/objects/Attractions__c/fields/Attraction_Type__c.field-meta.xml
<CustomField>
    <fullName>Attraction_Type__c</fullName>
    <label>Attraction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Bus Station</fullName>
            </value>
            <value>
                <fullName>Cinemas</fullName>
            </value>
            <value>
                <fullName>Schools</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Hospitals</fullName>
            </value>
            <value>
                <fullName>Clinics</fullName>
            </value>
            <value>
                <fullName>River</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Ferris Wheel</fullName>
            </value>
            <value>
                <fullName>Ice Rink</fullName>
            </value>
            <value>
                <fullName>Island</fullName>
            </value>
            <value>
                <fullName>Harbour</fullName>
            </value>
            <value>
                <fullName>Play Area</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>