force-app/main/default/objects/Attractions__c/fields/Project_PS__c.field-meta.xml
<CustomField>
    <fullName>Project_PS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Attractions</relationshipLabel>
    <relationshipName>Attractions</relationshipName>
    <type>Lookup</type>
</CustomField>