force-app/main/default/objects/Attractions__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Attractions</relationshipLabel>
    <relationshipName>Attractions</relationshipName>
    <type>Lookup</type>
</CustomField>